# iwamasa-2022

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/processed/network-non-treated-dataset/: netsimile_features.csv
data/processed/network-non-treated-dataset/node-link/: Zelkova_serrata_0.txt
data/processed/network-non-treated-dataset/node-position/: Zelkova_serrata_0.json
data/raw/: good_specimen_index.csv
notebooks/: extract_network-features.ipynb  extract_network.ipynb  segment_non-treated-leaf.ipynb  skeletonization.ipynb
notebooks/.ipynb_checkpoints/: extract_network-features-checkpoint.ipynb  segment_non-treated-leaf-checkpoint.ipynb
