[tool.poetry]
name = "ascender"
version = "0.1.0"
description = "Project template for XCCV group of cvpaper.challenge."
license = "MIT"
authors = ["cvpaper.challenge XCCV group"]
maintainers = ["yoshihiro fukuhara <gatheluck@gmail.com>"]
readme = "README.md"
keywords = [
    "ascender",
    "Python",
    "projects",
    "project templates",
    "project directory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Japanese",
    "Programming Language :: Python",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.1"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
pillow = "^9.4.0"
networkx = "^3.0"
opencv-python = "^4.7.0.68"
tqdm = "^4.64.1"
scikit-image = "^0.20.0"
ete3 = "^3.1.2"
torch = { path = ".cache/poetry_wheels/torch-1.7.1+cu110-cp38-cp38-linux_x86_64.whl" }
torchvision = { path = ".cache/poetry_wheels/torchvision-0.8.2+cu110-cp38-cp38-linux_x86_64.whl" }
timm = "^0.6.12"
segmentation-models-pytorch = "^0.2.0"
joblib = "^1.2.0"
albumentations = "^1.3.0"


[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mdformat-gfm = "^0.3.5"
mdformat_frontmatter = "^0.4.1"
mdformat_footnote = "^0.1.1"
flake8 = "^5.0.0"
mypy = "^0.991"
pytest-cov = "^4.0.0"
ipykernel = "^6.20.2"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = 3.8
# following setting is same as pysen
# https://github.com/pfnet/pysen/blob/main/setup.cfg#L12
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
