[tool.poetry]
name = "iwamasa-2022"
version = "0.1.0"
description = ""
authors = ["colum2131 <kohei.i.2131@gmail.com>"]
license = "Creative Commons Attribution 4.0 International"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
pillow = "^9.5.0"
networkx = "^3.1"
opencv-python = "^4.7.0.72"
tqdm = "^4.65.0"
joblib = "^1.2.0"
scikit-image = "0.20.0"
ete3 = "^3.1.2"
torch = "^2.0.0"
torchvision = "^0.15.1"
timm = "0.4.12"
segmentation-models-pytorch = "0.2.0"
albumentations = "^1.3.0"
ipykernel = "^6.22.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
